# SIFS

./: README.md
libs/sdm/: LICENSE  README.md
libs/sdm/lib/: alias.hpp  fmath.hpp  io.hpp  stats.hpp  supervised_data.hpp  supervised_data_regression.hpp  utils.hpp
libs/sdm/test/: CMakeLists.txt
libs/sdm/test/io/: load_libsvm_binary_randomly.cpp  load_libsvm_subsampling.cpp
libs/sdm/test/utils/: count_lines.cpp  count_value.cpp  get_cv_index.cpp
src/: ssvm_sifs.cpp  ssvm_sifs.hpp
test/: makefile  start  start.cpp
